--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="movie review site for new streaming shows and movies">
+    <meta name="keywords" content="movie reviews, new release movies, movie podcast, streaming shows">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Movie Magic</title>
+    
 </head>
 <body>
     <section></section>
