add font styling and logo id

--- a/index.html
+++ b/index.html
@@ -11,11 +11,15 @@
     
 </head>
 <body>
+    <header>
+        <a href="index.html">
+        <h1 id="logo">Movie Magic</h1></a>
+    </header>
     <section></section>
     <section></section>
     <section></section>
     <section></section>
-    <footer>Social Links</footer>
+    <footer> </footer>
 
 </body>
 </html>
