add header nav links

--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
     <header>
         <a href="index.html">
         <h1 id="logo">Movie Magic</h1></a>
+        <nav>
+            <ul id="menu">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="#">Movies</a></li>
+            <li><a href="#">streaming</a></li>
+            <li><a href="#">Get in touch</a></li>
+        </ul>
+        </nav>
     </header>
     <section></section>
     <section></section>
