add menu styling and position

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         <h1 id="logo">Movie Magic</h1></a>
         <nav>
             <ul id="menu">
-            <li><a href="index.html">Home</a></li>
+            <li><a href="#">Get in Touch</a></li>
+            <li><a href="#">Streaming</a></li>
             <li><a href="#">Movies</a></li>
-            <li><a href="#">streaming</a></li>
-            <li><a href="#">Get in touch</a></li>
+            <li><a href="index.html">Home</a></li>
         </ul>
         </nav>
     </header>
