--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
         </ul>
         </nav>
     </header>
-    <section></section>
+    <section>
+        <div id="hero-image">
+        
+        </div>
+    </section>
     <section></section>
     <section></section>
     <section></section>
