add main structure for main-content under header

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <nav>
             <ul id="menu">
             <li><a href="#">Get in Touch</a></li>
-            <li><a href="#">Streaming</a></li>
+            <li><a href="#">Podcast</a></li>
             <li><a href="#">Movies</a></li>
             <li><a href="index.html">Home</a></li>
         </ul>
@@ -28,7 +28,12 @@
         
         </div>
     </section>
-    <section></section>
+    <section id="main-content">
+        <div id="left-about">New Releases</div>
+        <div id="left-about">Top Box Office</div>
+        <div id="right-about">Rotten Tomatoes</div>
+        <div id="right-about">Podcast</div>
+    </section>
     <section></section>
     <section></section>
     <footer> </footer>
