trailer links and image addition

--- a/index.html
+++ b/index.html
@@ -29,7 +29,11 @@
         </div>
     </section>
     <section id="main-content">
-        <div id="left-about">New Releases</div>
+        <div id="trailers">
+            <h2>Upcoming Movies</h2>
+            <a href="https://www.darkhorizons.com/" target="_blank"><img src="" alt="Film clapper loader"></a>
+            <p>View the latest trailers for upcoming movies at Dark Horizons</p>
+        </div>
         <div id="left-about">Top Box Office</div>
         <div id="right-about">Rotten Tomatoes</div>
         <div id="right-about">Podcast</div>
