positioning add for hero image

--- a/index.html
+++ b/index.html
@@ -30,13 +30,30 @@
     </section>
     <section id="main-content">
         <div id="trailers">
-            <h2>Upcoming Movies</h2>
-            <a href="https://www.darkhorizons.com/" target="_blank"><img src="" alt="Film clapper loader"></a>
-            <p>View the latest trailers for upcoming movies at Dark Horizons</p>
+            <a href="https://www.darkhorizons.com/">
+                <h2>Upcoming Movies</h2>
+                <p>View the latest trailers.</p>
+             </a>
         </div>
-        <div id="left-about">Top Box Office</div>
-        <div id="right-about">Rotten Tomatoes</div>
-        <div id="right-about">Podcast</div>
+        <div id="box-office">
+            <a href="#">
+                <h2>Top Grossing Movies</h2>
+                <p>Cha! Ching!</p>
+                </a>
+        </div>
+        <div id="reviews">
+            <a href="#">
+            <h2>Movie Reviews</h2>
+            <p>Read our latest reviews</p>
+            </a>
+        </div>
+        <div id="podcast">
+            <a href="#">
+                <h2>Movie Magic Podcast</h2>
+                <p>Join the conversation</p>
+                </a>
+        </div>
+        <div id="popcorn">popcorn image</div>
     </section>
     <section></section>
     <section></section>
