--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
              </a>
         </div>
         <div id="box-office">
-            <a href="#">
+            <a href="https://www.boxofficemojo.com/weekend/2022W37/">
                 <h2>Top Grossing Movies</h2>
                 <p>Cha! Ching!</p>
                 </a>
