add style for div trailer and image positioning

--- a/index.html
+++ b/index.html
@@ -27,35 +27,16 @@
         <div id="hero-image">
         
         </div>
-    </section>
-    <section id="main-content">
-        <div id="trailers">
-            <a href="https://www.darkhorizons.com/">
-                <h2>Upcoming Movies</h2>
-                <p>View the latest trailers.</p>
-             </a>
-        </div>
-        <div id="box-office">
-            <a href="https://www.boxofficemojo.com/weekend/2022W37/">
-                <h2>Top Grossing Movies</h2>
-                <p>Cha! Ching!</p>
+    <section>
+            <div id="trailer">
+                <a href="https://www.darkhorizons.com/">
+                    <h2>View the lastet trailers</h2>
                 </a>
-        </div>
-        <div id="reviews">
-            <a href="#">
-            <h2>Movie Reviews</h2>
-            <p>Read our latest reviews</p>
-            </a>
-        </div>
-        <div id="podcast">
-            <a href="#">
-                <h2>Movie Magic Podcast</h2>
-                <p>Join the conversation</p>
-                </a>
-        </div>
-        <div id="popcorn">popcorn image</div>
+                <h3>Visit Dark Horizons to get the latest upcoming feature trailers</h3>
+                <img src="/assets/images/Trailerimage300px.jpg" alt="clapper loader for films">
+            </div>
+            
     </section>
-    <section></section>
     <section></section>
     <footer> </footer>
 
