add box office div

--- a/index.html
+++ b/index.html
@@ -33,8 +33,19 @@
                     <h2>View the lastet trailers</h2>
                 </a>
                 <h3>Visit Dark Horizons to get the latest upcoming feature trailers</h3>
-                <img src="/assets/images/Trailerimage300px.jpg" alt="clapper loader for films">
+                <a href="https://www.darkhorizons.com/">
+                <img src="/assets/images/Trailerimage300px.jpg" alt="clapper loader for films"></a>
             </div>
+            <div id="box-office">
+                <a href="https://www.boxofficemojo.com/">
+                    <h2>Cha! Ching!</h2>
+                </a>
+                <h3>A full breakdown of the latest box office numbers.</h3>
+                <a href="https://www.boxofficemojo.com/">
+                <img src="/assets/images/Trailerimage300px.jpg" alt="clapper loader for films"></a>
+
+            </div>
+
             
     </section>
     <section></section>
