--- a/index.html
+++ b/index.html
@@ -54,11 +54,26 @@
 
             </div>
 
-            </section>
+        </section>
 
-    <section >
-       
-    </section>
+    <footer>
+        <ul class="social-networks">
+          <li>
+            <a href="https://facebook.com" target="_blank" rel="noopener" aria-label="Visit our Facebook Page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
+          </li>
+          <li>
+            <a href="https://twitter.com" target="_blank" rel="noopener" aria-label="Visit our Twitter Page (opens in a new tab)"><i class="fa-brands fa-twitter"></i></a>
+          </li>
+          <li>
+            <a href="https://youtube.com" target="_blank" rel="noopener" aria-label="Visit our Youtube Page (opens in a new tab)"><i class="fa-brands fa-youtube"></i></a>
+          </li>
+          <li>
+            <a href="https://instagram.com" target="_blank" rel="noopener" aria-label="Visit our Instagram Page (opens in a new tab)"><i class="fa-brands fa-instagram"></i></a>
+          </li>
+        </ul>
+      </footer>
+
+      <script src="https://kit.fontawesome.com/ad7d76f599.js" crossorigin="anonymous"></script>
     
 
 </body>
