--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h1 id="logo">Movie Magic</h1></a>
         <nav>
             <ul id="menu">
-            <li><a href="#">Get in Touch</a></li>
+            <li><a href="form.html">Get in Touch</a></li>
             <li><a href="https://www.podbean.com/?gclid=CjwKCAjwyaWZBhBGEiwACslQoxi_9WKbvpiAXOXpWzpQucPjz7JNRLiYiJGAX4haP2vZB-1IJJpUvxoCVZ8QAvD_BwE">Podcast</a></li>
             <li><a href="movies.html">Movies</a></li>
             <li><a href="index.html">Home</a></li>
