--- a/form.html
+++ b/form.html
@@ -24,6 +24,10 @@
         </nav>
     </header>
 
+    <section>
+        <form action=""></form>
+    </section>
+
     <footer>
         <ul class="social-networks">
           <li>
