add form section and style

--- a/movies.html
+++ b/movies.html
@@ -24,6 +24,10 @@
         </nav>
     </header>
     <section>
+
+      <div class="moviesabout">
+
+      </div>
         
     </section>
     <footer>
