add movies sections

--- a/movies.html
+++ b/movies.html
@@ -26,6 +26,37 @@
     <section>
 
       <div class="moviesabout">
+        <div class="review-section">
+          <h2>Top Gun Maverick</h2>
+
+        </div>
+        <div class="review-section">
+          <h2>
+            Don't Worry Darling
+          </h2>
+
+        </div>
+        <div class="review-section">
+          <h2>
+            Ticket to Paradise
+          </h2>
+
+        </div>
+        <div class="review-section">
+
+          <h2>
+            See How they Run
+          </h2>
+
+        </div>
+        <div class="review-section">
+
+          <h2>
+            Best 
+          </h2>
+
+        </div>
+
 
       </div>
         
