--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <section>
         <div id="hero-image"> </div>
     </section>
-    
+    <section id="home-page">
             <div id="trailer">
                 <a href="https://www.darkhorizons.com/">
                     <h2>View the lastet trailers</h2>
@@ -53,7 +53,7 @@
                 <img class="podcast-img" src="/assets/images/podcastsized.jpg" alt="podcast studio"></a>
 
             </div>
-
+        </section>
 
     <footer>
         <ul class="social-networks">
