image file path

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 </a>
                 <h3>Visit Dark Horizons to get the latest upcoming feature trailers</h3>
                 <a href="https://www.darkhorizons.com/">
-                <img class="trailer-img" src="/assets/images/Trailerimage300px.jpg" alt="clapper loader for films"></a>
+                <img class="trailer-img" src="./assets/images/Trailerimage300px.jpg" alt="clapper loader for films"></a>
             </div>
             <div id="box-office">
                 <a href="https://www.boxofficemojo.com/">
