add file path corrections

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 </a>
                 <h3>A full breakdown of the latest box office numbers.</h3>
                 <a href="https://www.boxofficemojo.com/">
-                <img class="money" src="/assets/images/money.jpeg" alt="hands holing dollars"></a>
+                <img class="money" src="./assets/images/money.jpeg" alt="hands holing dollars"></a>
 
             </div>
             <div id="podcast">
@@ -50,7 +50,7 @@
                 </a>
                 <h3>Join us weekly on our movies podcast available on Podbean.</h3>
                 <a href="https://www.podbean.com/?gclid=CjwKCAjwyaWZBhBGEiwACslQoxi_9WKbvpiAXOXpWzpQucPjz7JNRLiYiJGAX4haP2vZB-1IJJpUvxoCVZ8QAvD_BwE">
-                <img class="podcast-img" src="/assets/images/podcastsized.jpg" alt="podcast studio"></a>
+                <img class="podcast-img" src="./assets/images/podcastsized.jpg" alt="podcast studio"></a>
 
             </div>
         </section>
