--- a/movies.html
+++ b/movies.html
@@ -28,29 +28,29 @@
       <div class="moviesabout">
         <div class="topgun-section">
           <a href="https://www.podbean.com/?gclid=CjwKCAjwyaWZBhBGEiwACslQoxi_9WKbvpiAXOXpWzpQucPjz7JNRLiYiJGAX4haP2vZB-1IJJpUvxoCVZ8QAvD_BwE">
-          <img src="/assets/images/topgun2-poster.webp" alt="top gun poster"></a>
+          <img src="./assets/images/topgun2-poster.webp" alt="top gun poster"></a>
 
         </div>
         <div class="darling-section">
           <a href="https://www.podbean.com/?gclid=CjwKCAjwyaWZBhBGEiwACslQoxi_9WKbvpiAXOXpWzpQucPjz7JNRLiYiJGAX4haP2vZB-1IJJpUvxoCVZ8QAvD_BwE">
-          <img src="/assets/images/darling.webp" alt="don't worry darling poster"></a>
+          <img src="./assets/images/darling.webp" alt="don't worry darling poster"></a>
 
         </div>
         <div class="paradise-section">
           <a href="https://www.podbean.com/?gclid=CjwKCAjwyaWZBhBGEiwACslQoxi_9WKbvpiAXOXpWzpQucPjz7JNRLiYiJGAX4haP2vZB-1IJJpUvxoCVZ8QAvD_BwE">
-          <img src="/assets/images/paradise.jpeg" alt="ticket to paradise poster"></a>
+          <img src="./assets/images/paradise.jpeg" alt="ticket to paradise poster"></a>
 
         </div>
         <div class="run-section">
 
           <a href="https://www.podbean.com/?gclid=CjwKCAjwyaWZBhBGEiwACslQoxi_9WKbvpiAXOXpWzpQucPjz7JNRLiYiJGAX4haP2vZB-1IJJpUvxoCVZ8QAvD_BwE">
-          <img src="/assets/images/See-How-They-Run-Poster-Landscape.jpeg" alt="see how they run poster"></a>
+          <img src="./assets/images/See-How-They-Run-Poster-Landscape.jpeg" alt="see how they run poster"></a>
 
         </div>
         <div class="beast-section">
 
           <a href="https://www.podbean.com/?gclid=CjwKCAjwyaWZBhBGEiwACslQoxi_9WKbvpiAXOXpWzpQucPjz7JNRLiYiJGAX4haP2vZB-1IJJpUvxoCVZ8QAvD_BwE">
-          <img src="/assets/images/beast.jpeg" alt="beast poster"></a>
+          <img src="./assets/images/beast.jpeg" alt="beast poster"></a>
 
         </div>
 
