replace front page divs

--- a/index.html
+++ b/index.html
@@ -27,33 +27,12 @@
         <div id="hero-image"> </div>
     </section>
     <section id="home-page">
-            <div id="trailer">
-                <a href="https://www.darkhorizons.com/">
-                    <h2>View the lastet trailers</h2>
-                </a>
-                <h3>Visit Dark Horizons to get the latest upcoming feature trailers</h3>
-                <a href="https://www.darkhorizons.com/">
-                <img class="trailer-img" src="./assets/images/Trailerimage300px.jpg" alt="clapper loader for films"></a>
-            </div>
-            <div id="box-office">
-                <a href="https://www.boxofficemojo.com/">
-                    <h2>Cha! Ching!</h2>
-                </a>
-                <h3>A full breakdown of the latest box office numbers.</h3>
-                <a href="https://www.boxofficemojo.com/">
-                <img class="money" src="./assets/images/money.jpeg" alt="hands holing dollars"></a>
+        <div class="landing-page">
+            <h2>THE go to site for all things Movies!</h2>
+            <p>From the latest Hollywood news, to reviews from your favourite movies on our popular podcast. </p>
+        </div>
 
-            </div>
-            <div id="podcast">
-                <a href="https://www.podbean.com/?gclid=CjwKCAjwyaWZBhBGEiwACslQoxi_9WKbvpiAXOXpWzpQucPjz7JNRLiYiJGAX4haP2vZB-1IJJpUvxoCVZ8QAvD_BwE">
-                    <h2>Our Podcast</h2>
-                </a>
-                <h3>Join us weekly on our movies podcast available on Podbean.</h3>
-                <a href="https://www.podbean.com/?gclid=CjwKCAjwyaWZBhBGEiwACslQoxi_9WKbvpiAXOXpWzpQucPjz7JNRLiYiJGAX4haP2vZB-1IJJpUvxoCVZ8QAvD_BwE">
-                <img class="podcast-img" src="./assets/images/podcastsized.jpg" alt="podcast studio"></a>
-
-            </div>
-        </section>
+    </section>
 
     <footer>
         <ul class="social-networks">
