add achor to image landing page

--- a/index.html
+++ b/index.html
@@ -27,10 +27,13 @@
         <div id="hero-image"> </div>
     </section>
     <section id="home-page">
+       
         <div class="landing-page">
             <h2>THE go to site for all things Movies!</h2>
             <p>From the latest Hollywood news, to reviews from your favourite movies on our popular podcast. </p>
+            <a href="movies.html"><img class="clapper" src="./assets/images/Trailerimage300px.jpg" alt="clapper loader image"></a>
         </div>
+    
 
     </section>
 
