add section heading

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </ul>
         </nav>
     </header>
-    <section>
+    <section id="main">
         <div id="hero-image"> </div>
     </section>
     <section id="home-page">
